--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     margin-top: 10px;
   }
   .intro{
-    font-size: 0.5em
+    font-size: 0.5rem
     text-align: center;
     color: gray;
     margin-bottom: 15px;
